--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ dist: trusty
 sudo: required
 mono: none
 dotnet: 1.0.4
+before_install:
+  - chmod +x build.sh
 script:
   - ./build.sh --quiet verify
