--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,5 @@ before_install:
   - chmod +x build.sh
 script:
   - ./build.sh --quiet verify
+after_success:
+  - bash <(curl -s https://codecov.io/bash) -e TRAVIS_NODE_VERSION
